--- a/templates/extjs/index.html
+++ b/templates/extjs/index.html
@@ -53,57 +53,57 @@
 		<div class="loading-indicator">Media Server<br /><span id="loading-msg" class="loading-msg">Loading styles and images...</span></div>
 	</div>
     <!-- include everything after the loading indicator -->
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=extjs/resources/css/ext-all.css&template='|cat:$smarty.const.LOCAL_BASE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/Filetypes.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/Desktop.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/Portal.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/Downloads.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/Player.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/Global.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/examples.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=css/examples.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
-    <link rel="stylesheet" type="text/css" href="{'module=template&file=livegrid/src/resources/css/ext-ux-livegrid.css&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/extjs/resources/css/ext-all.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/Filetypes.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/Desktop.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/Portal.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/Downloads.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/Player.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/Global.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/examples.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/css/examples.css'|url}" />
+    <link rel="stylesheet" type="text/css" href="{'template/extjs/livegrid/src/resources/css/ext-ux-livegrid.css'|url}" />
 
     <!-- GC -->
  	<!-- LIBS -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Core API...';</script>
- 	<script type="text/javascript" src="{'module=template&file=extjs/adapter/ext/ext-base.js&template='|cat:$smarty.const.LOCAL_BASE|generate_href}"></script>
+ 	<script type="text/javascript" src="{'template/extjs/extjs/adapter/ext/ext-base.js'|url}"></script>
 
  	<!-- ENDLIBS -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Core Components)';</script>
-    <script type="text/javascript" src="{'module=template&file=extjs/ext-all-debug.js&template='|cat:$smarty.const.LOCAL_BASE|generate_href}"></script>
+    <script type="text/javascript" src="{'template/extjs/extjs/ext-all-debug.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Library Mods)';</script>
- 	<script type="text/javascript" src="{'module=template&file=js/Library.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+ 	<script type="text/javascript" src="{'template/extjs/js/Library.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Buffered Components)';</script>
-	<script type="text/javascript" src="{'module=template&file=livegrid/src/GridPanel.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-	<script type="text/javascript" src="{'module=template&file=livegrid/src/GridView.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-	<script type="text/javascript" src="{'module=template&file=livegrid/src/RowSelectionModel.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-	<script type="text/javascript" src="{'module=template&file=livegrid/src/Store.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-	<script type="text/javascript" src="{'module=template&file=livegrid/src/Toolbar.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+	<script type="text/javascript" src="{'template/extjs/livegrid/src/GridPanel.js'|url}"></script>
+	<script type="text/javascript" src="{'template/extjs/livegrid/src/GridView.js'|url}"></script>
+	<script type="text/javascript" src="{'template/extjs/livegrid/src/RowSelectionModel.js'|url}"></script>
+	<script type="text/javascript" src="{'template/extjs/livegrid/src/Store.js'|url}"></script>
+	<script type="text/javascript" src="{'template/extjs/livegrid/src/Toolbar.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Media Components)';</script>
-	<script type="text/javascript" src="{'module=template&file=js/XMLTreeNode.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-	<script type="text/javascript" src="{'module=template&file=js/FolderView.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
- 	<script type="text/javascript" src="{'module=template&file=js/Address.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+	<script type="text/javascript" src="{'template/extjs/js/XMLTreeNode.js'|url}"></script>
+	<script type="text/javascript" src="{'template/extjs/js/FolderView.js'|url}"></script>
+ 	<script type="text/javascript" src="{'template/extjs/js/Address.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading UI Components... (Extra Components)';</script>
-	<script type="text/javascript" src="{'module=template&file=ux/mediapanel.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-	<script type="text/javascript" src="{'module=template&file=js/GMapPanel.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+	<script type="text/javascript" src="{'template/extjs/ux/mediapanel.js'|url}"></script>
+	<script type="text/javascript" src="{'template/extjs/js/GMapPanel.js'|url}"></script>
 
     <!-- DESKTOP -->
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Initializing Desktop...';</script>
-    <script type="text/javascript" src="{'module=template&file=js/StartMenu.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-    <script type="text/javascript" src="{'module=template&file=js/TaskBar.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-    <script type="text/javascript" src="{'module=template&file=js/Desktop.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/StartMenu.js'|url}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/TaskBar.js'|url}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/Desktop.js'|url}"></script>
 	
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications...';</script>
-    <script type="text/javascript" src="{'module=template&file=js/App.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/App.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Module)';</script>
-    <script type="text/javascript" src="{'module=template&file=js/Module.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/Module.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Portal)';</script>
-    <script type="text/javascript" src="{'module=template&file=js/Portal.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/Portal.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Downloads)';</script>
-    <script type="text/javascript" src="{'module=template&file=js/Downloads.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/Downloads.js'|url}"></script>
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Applications... (Player)';</script>
-    <script type="text/javascript" src="{'module=template&file=js/Player.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
+    <script type="text/javascript" src="{'template/extjs/js/Player.js'|url}"></script>
 
 	<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading Personal Settings...';</script>
 	<div id="x-desktop">
@@ -129,8 +129,8 @@
 		<div class="x-clear"></div>
 	</div>
 	
-    <script type="text/javascript" src="{'module=template&file=js/Config.js&template='|cat:$smarty.const.HTML_TEMPLATE|generate_href}"></script>
-    <!--<script type="text/javascript" src="{'file=js/examples.js&template='|cat:$smarty.const.LOCAL_BASE|generate_href:'template'}"></script>-->
+    <script type="text/javascript" src="{'template/extjs/js/Config.js'|url}"></script>
+    <!--<script type="text/javascript" src="{'file=js/examples.js'|url:'template'}"></script>-->
 	
 	{literal}
 	<script type="text/javascript">
