git-svn-id: svn://localhost/Media%20Server@346 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/css/errors.css
+++ b/templates/live/css/errors.css
@@ -6,6 +6,24 @@
 	background-color:#FF6;
 }
 
+.debug .msg {
+	display:block;
+	cursor:pointer;
+	background-color:#FF6;
+}
+
+.debug .msg.php {
+	background-color:#FC5;
+}
+
+.debug .msg.db {
+	background-color:#F97;
+}
+
+.debug .msg.verbose {
+	background-color:#FF9;
+}
+
 .debug.hide * {
 	display:none;
 	visibility:hidden;
