--- a/templates/live/css/select.css
+++ b/templates/live/css/select.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 
 
-#selector {
+.ui-selectable-helper {
 	-moz-opacity:.25;
 	opacity: .25;
 	filter:alpha(opacity=25);
@@ -15,4 +15,63 @@
 	height:500px;
 	overflow:auto;
 	white-space:nowrap;
+}
+
+.files div.ui-selecting {
+	background:#F7FBFF url(?path_info=template/live/images/browse_select_bg.png) repeat-x scroll center bottom;
+	border:1px solid #D8F0FA;
+}
+.files div.ui-selected {
+	background:#F7FBFF url(?path_info=template/live/images/browse_select_bg.png) repeat-x scroll center bottom;
+	border:1px solid #D8F0FA;
+}
+
+.infobar {
+	border-top:1px solid #E0E0E0;
+	height:64px;
+	background:transparent url(?path_info=template/live/images/middle_fade.png) repeat scroll 0 0;
+	color:#FFF;
+	width:100%;
+	line-height:normal;
+	margin:0;
+	padding:0;
+	vertical-align:middle;
+	white-space:nowrap;
+}
+
+.infobar * {
+	line-height:normal;
+}
+
+.fileInfo {
+	width:100%;
+	vertical-align:top;
+	height:48px;
+	white-space:normal;
+}
+
+.fileInfo .title {
+	font-size:14px;
+}
+
+.fileInfo .label {
+	font-weight:bold;
+	width:50%;
+	text-align:right;
+	margin-right:4px;
+}
+
+.fileInfo td {
+	width:33%;
+	vertical-align:middle;
+	padding:4px;
+}
+
+.fileInfo .fileThumb, .fileInfo .fileThumb td {
+	padding:0;
+	width:auto;
+}
+
+.fileInfo infoCell {
+	width:100%;
 }
