--- a/templates/live/css/list.css
+++ b/templates/live/css/list.css
@@ -75,3 +75,13 @@
 #playlist div.even {
 	background-color:#CCC;
 }
+
+.listitem {
+	text-decoration:none;
+}
+
+
+.listitem span {
+	display:block;
+	
+}
