git-svn-id: svn://localhost/Media%20Server@361 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/css/forms.css
+++ b/templates/live/css/forms.css
@@ -43,6 +43,12 @@
 	float:left;
 }
 
+.field_row .field.field_set .fielddesc {
+	width:auto;
+	float:none;
+	color:#999;
+}
+
 .fieldname.valid {
 	background-color:#DDFFDD;
 }
