--- a/templates/live/css/menu.css
+++ b/templates/live/css/menu.css
@@ -46,7 +46,7 @@
 }
 
 .menu .itemSelect {
-	background:#F7FBFF url(?path_info=template/live/images/browse_select_bg.png) repeat-x scroll center bottom;
+	background:#F7FBFF url(images/browse_select_bg.png) repeat-x scroll center bottom;
 	border:1px solid #D8F0FA;
 }
 
