git-svn-id: svn://localhost/Media%20Server@376 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/css/errors.css
+++ b/templates/live/css/errors.css
@@ -14,15 +14,15 @@
 	color:#000;
 }
 
-.debug .msg.php {
-	background-color:#FC5;
-}
-
-.debug .msg.db {
+.debug .msg.php_error {
 	background-color:#F97;
 }
 
-.debug .msg.verbose {
+.debug .msg.db_error {
+	background-color:#FC5;
+}
+
+.debug .msg.verbose_error {
 	background-color:#FF9;
 }
 
