--- a/templates/live/css/layout.css
+++ b/templates/live/css/layout.css
@@ -42,9 +42,8 @@ body {
 	width:100%
 }
 #expander {
-	margin:0 -400px 0 -400px;
 	position:relative;
-	min-width:800px
+	min-width:800px;
 }
 
 .header {
@@ -105,6 +104,8 @@ body {
 #breadcrumb {
 	color:#444444;
 	margin-left:9px;
+	margin-top:5px;
+	margin-bottom:5px;
 	overflow:hidden;
 	width:99%;
 }
@@ -129,36 +130,24 @@ body {
 	text-decoration:none;
 }
 
-#main {
-	height:100%;
-	table-layout:fixed;
-	width:100%;
-}
-
-.sideColumn {
-	width:10px;
-}
-
 .sideColumn.right {
+	width:10px;
+	height:250px;
 	background-image:url(images/shadow.png);
 	background-position:0 0;
 	background-repeat:no-repeat;
+	float:right;
+	position:relative;
+	top:20px;
 }
 
 #mainColumn {
 	height:100%;
-}
-
-#mainTable {
-	border:1px solid #E0E0E0;
 	table-layout:fixed;
+	border:1px solid #E0E0E0;
 	vertical-align:top;
-	width:100%;
-}
-
-.contentSpacing {
-	overflow:hidden;
 	padding:1.25em;
+	overflow:hidden;
 	position:relative;
 }
 
