--- a/templates/live/css/select.css
+++ b/templates/live/css/select.css
@@ -31,9 +31,8 @@
 	height:64px;
 	background:transparent url(images/middle_fade.png) repeat scroll 0 0;
 	color:#FFF;
-	width:100%;
 	line-height:normal;
-	margin:0;
+	margin-right:10px;
 	padding:0;
 	vertical-align:middle;
 	white-space:nowrap;
@@ -52,6 +51,7 @@
 
 .fileInfo .title {
 	font-size:14px;
+	width:50px;
 }
 
 .fileInfo .label {
@@ -73,5 +73,4 @@
 }
 
 .fileInfo infoCell {
-	width:100%;
 }
