git-svn-id: svn://localhost/Media%20Server@391 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/css/errors.css
+++ b/templates/live/css/errors.css
@@ -34,7 +34,7 @@ form p {
 	visibility:hidden;
 }
 
-.debug.hide #hide_link {
+.debug.hide #hide_link, .debug.hide #hide_link * {
 	display:block;
 	visibility:visible;
 }
