git-svn-id: svn://localhost/Media%20Server@396 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/css/errors.css
+++ b/templates/live/css/errors.css
@@ -17,6 +17,11 @@ form p {
 	color:#000;
 }
 
+.debug .msg pre {
+	word-wrap:break-word;
+	white-space:normal;
+}
+
 .debug .msg.php_error {
 	background-color:#F97;
 }
