git-svn-id: svn://localhost/Media%20Server@398 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/css/errors.css
+++ b/templates/live/css/errors.css
@@ -9,6 +9,14 @@ form p {
 	background-color:#FF6;
 }
 
+.debug .hl-main {
+	display:inline;
+}
+.debug .hl-main pre {
+	margin:0px;
+	display:inline;
+}
+
 .debug .msg {
 	display:block;
 	cursor:pointer;
