--- a/templates/tunegazelle/styles/layout.css
+++ b/templates/tunegazelle/styles/layout.css
@@ -2,10 +2,21 @@
 
 body, html {
 	font-family: Arial, Helvetica, sans-serif;
+	font-size:12pt;
+	font-weight:bold;
+	min-width:600px;
+	width:100%;
+	height:100%;
+	min-width:1000px;
+	min-height:500px;
+}
+
+input {
+	font-weight:bold;
 }
 
 body, html, #heading h1, #left-menu,
-#left-menu ul, #left-menu ol {
+#left-menu ul, #left-menu ol, .folders ul {
 	margin:0px;
 	padding:0px;
 }
@@ -14,7 +25,12 @@ body, html, #heading h1, #left-menu,
 	width:100%;
 	font-size:x-large;
 	padding:5px 0px;
-	float:left;
+	min-width:1000px;
+	height:29px;
+	position:absolute;
+	z-index:100;
+	top:0;
+	left:0;
 }
 
 
@@ -26,17 +42,22 @@ body, html, #heading h1, #left-menu,
 #left-menu {
 	width:200px;
 	float:left;
+	display:block;
+	z-index:10;
+	position:relative;
+	min-height:100%;
 }
 
 #left-menu li {
 	line-height: 16px;
 	list-style: none outside none;
 	padding:5px;
-}
-
-#left-menu li:hover, #left-menu li a:hover {
 	cursor:pointer;
 	border-radius:3px 3px 3px 3px;
+}
+
+#left-menu li:hover {
+	padding:4px;
 }
 
 #left-menu ul, #left-menu ol {
@@ -44,5 +65,200 @@ body, html, #heading h1, #left-menu,
 }
 
 #inner-list {
-	margin:10px;
+	margin:50px 10px 10px 10px;
 }
+
+#controls {
+	padding-top:5px;
+	display:inline-block;
+	width:100%;
+	float:right;
+	white-space:nowrap;
+	min-width:1000px;
+	z-index:5;
+	position:absolute;
+	top:40px;
+}
+
+#controls * {
+	white-space:nowrap;
+}
+
+#search-box {
+	display:block;
+    margin:0px 5px 0px 100px;
+	padding:3px;
+	border-radius:3px 3px 3px 3px;
+	float:left;
+}
+
+#search {
+	border:0px;
+	background-color:transparent;
+}
+
+#search-icon {
+    float: left;
+    height: 18px;
+    margin-right: 3px;
+    width: 18px;
+	cursor:pointer;
+}
+
+#view-control {
+    float: right;
+    height: 18px;
+	margin-top:5px;
+    margin-right: 10px;
+    width: 18px;
+	cursor:pointer;
+}
+
+#view-control:hover {
+	border-radius:3px 3px 3px 3px;
+}
+
+#tab-strip {
+	display:block;
+	margin-left:211px;
+}
+
+#tab-strip div:first-child, #list-tabs div:first-child {
+	border-radius:3px 0px 0px 0px;
+}
+
+#tab-strip div:last-child, #list-tabs div:last-child {
+	border-radius:0px 3px 0px 0px;
+}
+
+.current-tab, .inactive-tab {
+	float:left;
+	display:inline-block;
+	padding:5px;
+}
+
+.inactive-tab {
+	cursor:pointer;
+}
+
+.current-tab {
+}
+
+#handlers {
+	display:block;
+	text-align:center;
+	float:left;
+}
+
+.active-handler, .inactive-handler {
+	display:inline-block;
+	padding:5px 5px;
+}
+
+.inactive-handler {
+	cursor:pointer;
+}
+
+#list-tabs {
+	float:right;
+	margin-right:10px;
+	min-width:200px;
+	padding-right:10px;
+}
+
+#details {
+	display:block;
+	height:80px;
+	position:fixed;
+	bottom:0px;
+	width:100%;
+	z-index:1;
+}
+
+#folder-pre {
+	height:244px;
+	float:left;
+}
+
+.folders {
+	width:200px;
+	float:left;
+	display:block;
+	min-height:100%;
+	position:relative;
+	z-index:2;
+	margin-left:-1px;
+}
+
+.folders ul {
+    list-style: none outside none;
+	float:left;
+	width:200px;
+	margin-top:76px;
+	margin-bottom:80px;
+}
+
+.folders li {
+	list-style: none outside none;
+	padding:10px 0px 10px 0px;
+	cursor:pointer;
+	white-space:nowrap;
+	min-width:100%;
+	clear:both;
+	display:inline-block;
+	position:relative;
+	overflow:hidden;
+	height:20px;
+}
+
+.folders li span {
+	margin-left: 5px;
+}
+
+.folders li .folder-icon {
+    float: left;
+    height: 24px;
+    margin: -2px 0px -2px 5px;
+    width: 24px;
+	background-image:url("images/filetypes/folder_24x24.png");
+}
+
+.folders li:first-child, .folders li.placeholder:nth-child(2) {
+	margin-top:10px;
+}
+
+.folders li a {
+	text-decoration:none;
+	margin-right:40px;
+	margin-left:5px;
+}
+
+.folders li:hover {
+	margin-left:-1px;
+	width:auto;
+	min-width:200px;
+	z-index:10;
+	overflow:visible;
+}
+
+.folders .loading-icon {
+	top:50%;
+	left:50%;
+	margin-top:-12px;
+	margin-left:-12px;
+    height: 24px;
+    width: 24px;
+	position:relative;
+}
+
+#right-menu {
+	width:220px;
+	float:right;
+	display:block;
+	margin-left:-1px;
+	height:100%;
+}
+
+
+
+
