--- a/templates/tunegazelle/styles/layout.css
+++ b/templates/tunegazelle/styles/layout.css
@@ -13,10 +13,19 @@ body, html {
 
 input {
 	font-weight:bold;
+	outline-color:initial;
+	outline-style:none;
+	outline-width:initial;
+}
+
+a {
+	outline-color:initial;
+	outline-style:none;
+	outline-width:initial;
 }
 
 body, html, #heading h1, #left-menu,
-#left-menu ul, #left-menu ol, .folders ul {
+#left-menu ul, #left-menu ol, .folders ul, .folders, .folders ul {
 	margin:0px;
 	padding:0px;
 }
@@ -27,7 +36,7 @@ body, html, #heading h1, #left-menu,
 	padding:5px 0px;
 	min-width:1000px;
 	height:29px;
-	position:absolute;
+	position:fixed;
 	z-index:100;
 	top:0;
 	left:0;
@@ -36,16 +45,42 @@ body, html, #heading h1, #left-menu,
 
 #heading h1 {
 	font-size:x-large;
-	margin:0px 5px;
+	margin:0px 5px -29px 5px;
+}
+
+#heading a {
+	float:right;
+	font-size:14px;
+	margin:5px;
+	text-decoration:none;
+}
+
+#heading a span {
+	padding-left:20px;
+	background-repeat:no-repeat;
+    background-position: left center;
+}
+
+#heading a span span {
+	background:none !important;
+	padding:0px;
+}
+
+#heading .settings span {
+	background-image:url("images/settings.png");
+}
+
+#heading .login span {
+	background-image:url("images/login.png");
 }
 
 #left-menu {
 	width:200px;
-	float:left;
 	display:block;
 	z-index:10;
-	position:relative;
-	min-height:100%;
+	position:fixed;
+	height:100%;
+	top:0;
 }
 
 #left-menu li {
@@ -75,8 +110,8 @@ body, html, #heading h1, #left-menu,
 	float:right;
 	white-space:nowrap;
 	min-width:1000px;
-	z-index:5;
-	position:absolute;
+	z-index:7;
+	position:fixed;
 	top:40px;
 }
 
@@ -86,7 +121,7 @@ body, html, #heading h1, #left-menu,
 
 #search-box {
 	display:block;
-    margin:0px 5px 0px 100px;
+    margin:0px 5px 0px 200px;
 	padding:3px;
 	border-radius:3px 3px 3px 3px;
 	float:left;
@@ -123,12 +158,8 @@ body, html, #heading h1, #left-menu,
 	margin-left:211px;
 }
 
-#tab-strip div:first-child, #list-tabs div:first-child {
-	border-radius:3px 0px 0px 0px;
-}
-
-#tab-strip div:last-child, #list-tabs div:last-child {
-	border-radius:0px 3px 0px 0px;
+#tab-strip div {
+	border-radius:3px 3px 0px 0px;
 }
 
 .current-tab, .inactive-tab {
@@ -141,6 +172,10 @@ body, html, #heading h1, #left-menu,
 	cursor:pointer;
 }
 
+#tab-strip .inactive-tab {
+	display:none;
+}
+
 .current-tab {
 }
 
@@ -150,12 +185,16 @@ body, html, #heading h1, #left-menu,
 	float:left;
 }
 
-.active-handler, .inactive-handler {
-	display:inline-block;
-	padding:5px 5px;
+#handlers ul {
+    list-style: none outside none;
+	margin:0;
+	padding:0;
+	display:inline;
 }
 
-.inactive-handler {
+#handlers li {
+	display:inline;
+	padding:0px 5px;
 	cursor:pointer;
 }
 
@@ -166,36 +205,51 @@ body, html, #heading h1, #left-menu,
 	padding-right:10px;
 }
 
+#list-tabs div:first-child {
+	border-radius:3px 0px 0px 0px;
+}
+
+#list-tabs div:last-child {
+	border-radius:0px 3px 0px 0px;
+}
+
 #details {
 	display:block;
 	height:80px;
 	position:fixed;
 	bottom:0px;
 	width:100%;
-	z-index:1;
+	z-index:8;
 }
 
-#folder-pre {
-	height:244px;
-	float:left;
+#folder-previous {
+	height:100%;
+	position:fixed;
+	top:0;
+	left:200px;
 }
 
 .folders {
 	width:200px;
-	float:left;
 	display:block;
-	min-height:100%;
-	position:relative;
-	z-index:2;
-	margin-left:-1px;
+	height:100%;
+	position:fixed;
+	z-index:5;
+	padding-bottom:80px;
+	top:0;
+	left:200px;
+}
+
+.folders.loading, .folders.loaded {
+	z-index:4;
 }
 
 .folders ul {
     list-style: none outside none;
 	float:left;
 	width:200px;
-	margin-top:76px;
-	margin-bottom:80px;
+	top:76px;
+	position:relative;
 }
 
 .folders li {
@@ -203,7 +257,7 @@ body, html, #heading h1, #left-menu,
 	padding:10px 0px 10px 0px;
 	cursor:pointer;
 	white-space:nowrap;
-	min-width:100%;
+	width:100%;
 	clear:both;
 	display:inline-block;
 	position:relative;
@@ -220,7 +274,7 @@ body, html, #heading h1, #left-menu,
     height: 24px;
     margin: -2px 0px -2px 5px;
     width: 24px;
-	background-image:url("images/filetypes/folder_24x24.png");
+	background:url("images/filetypes/folder_24x24.png") no-repeat scroll left top transparent;
 }
 
 .folders li:first-child, .folders li.placeholder:nth-child(2) {
@@ -236,7 +290,7 @@ body, html, #heading h1, #left-menu,
 .folders li:hover {
 	margin-left:-1px;
 	width:auto;
-	min-width:200px;
+	min-width:210px;
 	z-index:10;
 	overflow:visible;
 }
@@ -251,12 +305,82 @@ body, html, #heading h1, #left-menu,
 	position:relative;
 }
 
+.folders.hidden {
+	display:none;
+}
+
 #right-menu {
 	width:220px;
-	float:right;
 	display:block;
 	margin-left:-1px;
 	height:100%;
+	position:fixed;
+	right:0;
+	z-index:5;
+	top:0;
+}
+
+#content {
+	margin-left:400px;
+	padding-right:230px;
+	float:none;
+    outline: 0 none;
+	min-height:100%;
+}
+
+#content > * {
+	padding-top:86px;
+	margin-bottom:90px;
+	marign-left:10px;
+}
+
+#files {
+    outline: 0 none;
+	height:auto;
+	float:none;
+	z-index:1;
+	padding-left:200px;
+}
+
+.file {
+	white-space:nowrap;
+	cursor:pointer;
+}
+
+.cell {
+	line-height:22px;
+    outline: medium none;
+	vertical-align:middle;
+	display:none;
+}
+
+.cell {
+	width:200px;
+	overflow:hidden;
+}
+
+.column_filename, .column_filetype, .column_icon {
+	display:table-cell;
+}
+
+.folders.login .icon {
+    float: left;
+    height: 30px;
+    width: 30px;
+	background-repeat:no-repeat;
+	background-position:50% 50%;
+	background-attachment:scroll;
+	background-color:transparent;
+    margin: -5px 0 -2px 5px;
+}
+
+#login iframe {
+	width:100%;
+	width:100%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	height:0px;
 }
 
 
