--- a/templates/tunegazelle/styles/layout.css
+++ b/templates/tunegazelle/styles/layout.css
@@ -11,11 +11,153 @@ body, html {
 	min-height:500px;
 }
 
-input {
+input, select {
 	font-weight:bold;
 	outline-color:initial;
 	outline-style:none;
 	outline-width:initial;
+}
+
+form > input[type='submit'] {
+	font-size:16px;
+}
+
+#content select {
+	border-radius:3px;
+	padding:4px;
+	min-width:250px;
+	width:auto;
+	max-width:100%;
+	overflow:auto;
+}
+
+#content fieldset {
+	border-radius:3px;
+	margin-bottom:20px;
+}
+
+.picker_text {
+    margin-left: 410px;
+}
+
+.field_set > .field_submit {
+	display:inline;
+}
+
+.field_text input {
+	width:250px;
+}
+
+.field_row > .fieldname.expand {
+	background-image:none;
+}
+
+.field_row > .fieldname {
+	background-image:url("images/info.png");
+	background-repeat:no-repeat;
+	background-position:4px 4px;
+	padding-left:25px;
+	min-width:200px;
+}
+
+.field_set .fieldname {
+	margin-top:10px;
+	border-width:0px 1px 1px 1px;
+	border-style:solid;
+	margin-bottom:5px;
+	padding:5px;
+}
+
+.field_set > .field {
+	margin-bottom:10px;
+}
+
+.field_fieldset fieldset {
+	overflow:auto;
+}
+
+.field_fieldset fieldset > div {
+	display:table;
+	min-width:100%;
+	border-spacing:0px 5px;
+}
+
+.field_row {
+	display:table-row;
+	-moz-column-count: 3;
+	-webkit-column-count: 3;
+	column-count: 3;
+}
+
+.field_row.warn > * {
+	border-color:#CC6;
+}
+
+.field_row.pass > * {
+	border-color:#6C6;
+}
+
+.field_row.fail > * {
+	border-color:#C66;
+}
+
+.field_row > *:first-child {
+	border-left-style:solid;
+	border-left-width:10px;
+}
+
+.field_row > *:last-child {
+	border-right-style:solid;
+	border-right-width:5px;
+}
+
+.field_row > * {
+	display:table-cell;
+	vertical-align:top;
+	padding:5px;
+	height:50px;
+}
+
+.field_row > .field {
+	min-width:500px;
+	width:auto;
+}
+
+#row_setting_group_permissions > .field_set {
+	display:table-row;
+}
+
+#row_setting_group_permissions > .field_set > .fieldname {
+	clear:both;
+}
+
+#row_setting_group_permissions > .field_set > div {
+}
+
+#row_setting_group_permissions > .field_set > .field_set > div {
+	display:table-cell;
+	padding:5px;
+}
+
+.ui-slider .ui-slider-handle {
+	border-radius:3px;
+	cursor:pointer;
+}
+
+#content a,
+#content input[type='submit'],
+#content input[type='reset'],
+#content input[type='button'] {
+	padding:5px;
+	border-radius:3px;
+	cursor:pointer;
+	margin:5px;
+	text-decoration:none;
+}
+
+#content a, #content input, #content select {
+	padding:5px;
+	border-radius:3px;
 }
 
 a {
@@ -74,6 +216,10 @@ body, html, #heading h1, #left-menu,
 	background-image:url("images/login.png");
 }
 
+#heading .logout span {
+	background-image:url("images/logout.png");
+}
+
 #left-menu {
 	width:200px;
 	display:block;
@@ -104,7 +250,6 @@ body, html, #heading h1, #left-menu,
 }
 
 #controls {
-	padding-top:5px;
 	display:inline-block;
 	width:100%;
 	float:right;
@@ -121,7 +266,7 @@ body, html, #heading h1, #left-menu,
 
 #search-box {
 	display:block;
-    margin:0px 5px 0px 200px;
+    margin:5px 5px 5px 400px;
 	padding:3px;
 	border-radius:3px 3px 3px 3px;
 	float:left;
@@ -143,10 +288,13 @@ body, html, #heading h1, #left-menu,
 #view-control {
     float: right;
     height: 18px;
-	margin-top:5px;
+	margin-top:8px;
     margin-right: 10px;
     width: 18px;
 	cursor:pointer;
+    position: absolute;
+    right: 250px;
+	padding:2px;
 }
 
 #view-control:hover {
@@ -156,6 +304,8 @@ body, html, #heading h1, #left-menu,
 #tab-strip {
 	display:block;
 	margin-left:211px;
+	position:absolute;
+	bottom:0px;
 }
 
 #tab-strip div {
@@ -183,6 +333,7 @@ body, html, #heading h1, #left-menu,
 	display:block;
 	text-align:center;
 	float:left;
+	margin:5px;
 }
 
 #handlers ul {
@@ -203,6 +354,9 @@ body, html, #heading h1, #left-menu,
 	margin-right:10px;
 	min-width:200px;
 	padding-right:10px;
+	bottom:0px;
+	right:0px;
+	position:absolute;
 }
 
 #list-tabs div:first-child {
@@ -213,6 +367,14 @@ body, html, #heading h1, #left-menu,
 	border-radius:0px 3px 0px 0px;
 }
 
+.field_row:focus > .fielddesc,
+.field_row:active > .fielddesc,
+.field_row:hover > .fielddesc,
+.field_row > .fieldname:hover ~ .fielddesc {
+	display:block;
+}
+
+.field_row > .fielddesc,
 #details {
 	display:block;
 	height:80px;
@@ -220,6 +382,12 @@ body, html, #heading h1, #left-menu,
 	bottom:0px;
 	width:100%;
 	z-index:8;
+	left:0px;
+	padding-left:420px;
+}
+
+.field_row > .fielddesc {
+	display:none;
 }
 
 #folder-previous {
@@ -232,7 +400,7 @@ body, html, #heading h1, #left-menu,
 .folders {
 	width:200px;
 	display:block;
-	height:100%;
+	min-height:100%;
 	position:fixed;
 	z-index:5;
 	padding-bottom:80px;
@@ -298,11 +466,11 @@ body, html, #heading h1, #left-menu,
 .folders .loading-icon {
 	top:50%;
 	left:50%;
-	margin-top:-12px;
+	margin-top:-28px;
 	margin-left:-12px;
     height: 24px;
     width: 24px;
-	position:relative;
+	position:absolute;
 }
 
 .folders.hidden {
@@ -321,17 +489,38 @@ body, html, #heading h1, #left-menu,
 }
 
 #content {
-	margin-left:400px;
-	padding-right:230px;
+	padding-left:420px;
+	padding-right:240px;
 	float:none;
     outline: 0 none;
 	min-height:100%;
 }
 
 #content > * {
+}
+
+#content > *:first-child {
 	padding-top:86px;
-	margin-bottom:90px;
-	marign-left:10px;
+}
+
+#content > *:last-child {
+	padding-bottom:110px;
+}
+
+#login {
+	padding-left:25%;
+	padding-right:25%;
+}
+
+#login > div {
+	display:none;
+	margin-top:25%;
+	padding:10px;
+	border-radius:3px;
+}
+
+#login > div:first-child {
+	display:block;
 }
 
 #files {
@@ -383,6 +572,69 @@ body, html, #heading h1, #left-menu,
 	height:0px;
 }
 
+.picker_hue, .picker_sat, .picker_lum {
+	float: left;
+	clear: left;
+	width: 300px;
+	margin: 15px;
+}
+.swatch {
+	width: 120px;
+	height: 100px;
+	margin-top: 18px;
+	margin-left: 410px;
+	background-image: none;
+    color: #333333;
+    border-radius:3px;
+}
 
+.ui-slider {
+    clear: left;
+    float: left;
+    margin: 15px;
+    border-radius:3px;
+    color: #333333;
+    font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
+    font-size: 1.1em;
+    height: 0.8em;
+    position: relative;
+    text-align: left;
+	width:360px;
+	background-position:left top;
+	background-repeat:no-repeat;
+}
+
+.picker_hue.ui-slider {
+    background-image:url("images/hue.png");
+}
+
+.picker_sat.ui-slider {
+	background-image:url("images/sat.png");
+}
+
+.picker_lum.ui-slider {
+	background-image:url("images/lum.png");
+}
+
+#green .ui-slider-range {
+    background: none repeat scroll 0 0 #8AE234;
+}
+
+.ui-slider-horizontal .ui-slider-range-min {
+display:none
+}
+
+.ui-slider .ui-slider-handle {
+    margin-left: -0.6em;
+    top: -0.3em;
+    cursor: default;
+    height: 1.2em;
+    position: absolute;
+    width: 1.2em;
+    z-index: 2;
+    outline: medium none;
+	margin:1px 0px 0px 0px !important;
+	padding:0px !important;
+}
 
 
